test/libsolidity/syntaxTests/imports/name_clash_in_import_2.sol
==== Source: a ====
contract A {}
==== Source: b ====
import "a" as A; contract A {}
// ----
// DeclarationError 2333: (b:17-30): Identifier already declared.
